# WordList

./: Dockerfile  app.py  create_doc.sh  pyproject.toml  requirements.txt  wordApp.py  words.out  words.py
.azure/: config
.github/workflows/: master_word-app.yml
static/: styles.css
templates/: word.html
wordlist/: Dockerfile  create_doc.sh  wordApp.py  words.out  words.py
wordlist/templates/: word.html
