[tool.poetry]
name = "wordlist"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
argparse = "^1.4.0"
logging = "^0.4.9.6"
pygame = "^2.5.1"
flask = "^2.3.3"
markupsafe = "^2.1.3"
urllib3 = "<2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
